<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shortList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:layout_gravity="top"
        android:background="@drawable/bg_player_controller_top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/topbar_content_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_shorts"
            android:textAppearance="@style/Text.Title1"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/search"
            style="@style/Widget.StreamTV.TopBarButton"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search" />

        <ImageButton
            android:id="@+id/profile"
            style="@style/Widget.StreamTV.TopBarButton"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_user_circle" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/flushOrange" />

    <LinearLayout
        android:id="@+id/errorGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_xx"
        android:visibility="gone">

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/Text.Body2"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/retry"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/retry" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingMore"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/topbar_height"
        android:indeterminateTint="@color/flushOrange"
        android:visibility="gone" />
</FrameLayout>
